room services working

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=your-mongodb-connection-string
+MONGO_URI=mongodb+srv://adi03:ySdbRQU1iaN9OWoq@study-room-backend.gyeeilm.mongodb.net/
 JWT_SECRET=your-secret-key
+
