--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
+// Generate a random key of 64 characters (512 bits)
+const crypto = require('crypto');
+const secretKey = crypto.randomBytes(64).toString('hex');
+
+
 MONGO_URI=mongodb+srv://adi03:ySdbRQU1iaN9OWoq@study-room-backend.gyeeilm.mongodb.net/
-JWT_SECRET=your-secret-key
+JWT_SECRET=secretKey
+
+
+
 
